--- a/app/src/main/res/layout/activity_display_question.xml
+++ b/app/src/main/res/layout/activity_display_question.xml
@@ -32,26 +32,21 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginLeft="36dp"
+        android:layout_width="330dp"
+        android:layout_height="48dp"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="19dp"
-        android:layout_marginRight="19dp"
         android:text="@string/reibun"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewQ" />
 
     <TextView
         android:id="@+id/p1Name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:layout_marginLeft="80dp"
-        android:layout_marginTop="28dp"
+        android:layout_width="140dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginLeft="64dp"
+        android:layout_marginTop="16dp"
         android:text="@string/textview"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,11 +54,11 @@
 
     <TextView
         android:id="@+id/p2Name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:layout_marginLeft="80dp"
-        android:layout_marginTop="32dp"
+        android:layout_width="140dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginLeft="64dp"
+        android:layout_marginTop="16dp"
         android:text="@string/textview"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
@@ -71,11 +66,11 @@
 
     <TextView
         android:id="@+id/p3Name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:layout_marginLeft="80dp"
-        android:layout_marginTop="32dp"
+        android:layout_width="140dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginLeft="64dp"
+        android:layout_marginTop="16dp"
         android:text="@string/textview"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
@@ -83,11 +78,11 @@
 
     <TextView
         android:id="@+id/p4Name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:layout_marginLeft="80dp"
-        android:layout_marginTop="32dp"
+        android:layout_width="140dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginLeft="64dp"
+        android:layout_marginTop="16dp"
         android:text="@string/textview"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
@@ -95,11 +90,11 @@
 
     <TextView
         android:id="@+id/p5Name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:layout_marginLeft="80dp"
-        android:layout_marginTop="32dp"
+        android:layout_width="140dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginLeft="64dp"
+        android:layout_marginTop="16dp"
         android:text="@string/textview"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
@@ -107,72 +102,72 @@
 
     <Button
         android:id="@+id/p1Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="56dp"
-        android:layout_marginRight="56dp"
+        android:layout_width="64dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
         android:onClick="MoveInputAnswer"
-        android:text="@string/button"
+        android:text="@string/answerbutton"
         android:visibility="invisible"
         app:layout_constraintBaseline_toBaselineOf="@+id/p1Name"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/p1Name" />
 
     <Button
         android:id="@+id/p2Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="56dp"
-        android:layout_marginRight="56dp"
+        android:layout_width="64dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
         android:onClick="MoveInputAnswer"
-        android:text="@string/button"
+        android:text="@string/answerbutton"
         android:visibility="invisible"
         app:layout_constraintBaseline_toBaselineOf="@+id/p2Name"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/p2Name" />
 
     <Button
         android:id="@+id/p3Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="56dp"
-        android:layout_marginRight="56dp"
+        android:layout_width="64dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
         android:onClick="MoveInputAnswer"
-        android:text="@string/button"
+        android:text="@string/answerbutton"
         android:visibility="invisible"
         app:layout_constraintBaseline_toBaselineOf="@+id/p3Name"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/p3Name" />
 
     <Button
         android:id="@+id/p5Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="56dp"
-        android:layout_marginRight="56dp"
+        android:layout_width="64dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
         android:onClick="MoveInputAnswer"
-        android:text="@string/button"
+        android:text="@string/answerbutton"
         android:visibility="invisible"
         app:layout_constraintBaseline_toBaselineOf="@+id/p5Name"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/p5Name" />
 
     <Button
         android:id="@+id/p4Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="56dp"
-        android:layout_marginRight="56dp"
+        android:layout_width="64dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
         android:onClick="MoveInputAnswer"
-        android:text="@string/button"
+        android:text="@string/answerbutton"
         android:visibility="invisible"
         app:layout_constraintBaseline_toBaselineOf="@+id/p4Name"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/p4Name" />
 
     <Button
         android:id="@+id/button6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="238dp"
+        android:layout_height="64dp"
         android:layout_marginTop="48dp"
         android:onClick="moveDisplayResult"
         android:text="@string/endQuestion"
-        android:textSize="36sp"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
