--- a/app/src/main/res/layout/activity_input_answer.xml
+++ b/app/src/main/res/layout/activity_input_answer.xml
@@ -8,8 +8,8 @@
 
     <TextView
         android:id="@+id/textView10"
-        android:layout_width="363dp"
-        android:layout_height="25dp"
+        android:layout_width="330dp"
+        android:layout_height="48dp"
         android:layout_marginTop="24dp"
         android:text="@string/reibun"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,7 +30,7 @@
 
     <TextView
         android:id="@+id/targetPlayerName"
-        android:layout_width="wrap_content"
+        android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
         android:layout_marginEnd="144dp"
@@ -44,17 +44,12 @@
 
     <EditText
         android:id="@+id/PlayerAnswer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="99dp"
-        android:layout_marginLeft="99dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="99dp"
-        android:layout_marginRight="99dp"
+        android:layout_width="300dp"
+        android:layout_height="86dp"
+        android:layout_marginTop="48dp"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/targetPlayerName" />
 
@@ -66,7 +61,7 @@
         android:layout_marginLeft="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
-        android:text="解答者"
+        android:text="回答者"
         app:layout_constraintBaseline_toBaselineOf="@+id/targetPlayerName"
         app:layout_constraintEnd_toStartOf="@+id/targetPlayerName"
         app:layout_constraintHorizontal_bias="0.5"
@@ -76,9 +71,9 @@
         android:id="@+id/finishAnswer"
         android:layout_width="170dp"
         android:layout_height="68dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="64dp"
         android:onClick="FinishAnswer"
-        android:text="解答完了"
+        android:text="回答完了"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
